ENG-1201 pxb: add debian 12(Bookworm) workers