@@ -34,11 +34,12 @@ imageMap['min-buster-x64']   = 'ami-090cd3aed687b1ee1'
 imageMap['min-focal-x64']    = 'ami-01773ce53581acf22'
 imageMap['min-jammy-x64']    = 'ami-0ee8244746ec5d6d4'
 imageMap['min-bullseye-x64'] = 'ami-0d0f7602aa5c2425d'
+imageMap['min-bookworm-x64'] = 'ami-0544719b13af6edc3'
 
 priceMap = [:]
-priceMap['c5a.large'] = '0.08'   // type=c5a.large, vCPU=2, memory=4GiB, saving=55%, interruption='<5%', price=0.043400
+priceMap['c5a.large'] = '0.08'    // type=c5a.large, vCPU=2, memory=4GiB, saving=55%, interruption='<5%', price=0.043400
 priceMap['m5d.2xlarge'] = '0.32' // type=m5d.2xlarge, vCPU=8, memory=32GiB, saving=59%, interruption='<5%', price=0.254600
-priceMap['m5d.4xlarge'] = '0.50' // type=m5d.4xlarge, vCPU=16, memory=64GiB, saving=70%, interruption='<5%', price=0.430800
+priceMap['m5d.4xlarge'] = '0.62'  // type=m5d.4xlarge, vCPU=16, memory=64GiB, saving=70%, interruption='<5%', price=0.430800
 
 userMap = [:]
 userMap['docker'] = 'ec2-user'
@@ -54,6 +55,7 @@ userMap['min-buster-x64'] = 'admin'
 userMap['min-focal-x64'] = 'ubuntu'
 userMap['min-jammy-x64'] = 'ubuntu'
 userMap['min-bullseye-x64'] = 'admin'
+userMap['min-bookworm-x64'] = 'admin'
 
 initMap = [:]
 initMap['docker'] = '''
@@ -202,12 +204,19 @@ initMap['debMap'] = '''
         echo try again
     done
     DEB_VER=$(lsb_release -sc)
-    if [[ ${DEB_VER} == "buster" ]] || [[ ${DEB_VER} == "bullseye" ]]; then
-        JAVA_VER="openjdk-11-jre-headless"
+    if [[ ${DEB_VER} == "bookworm" ]]; then
+        JAVA_VER="openjdk-17-jre-headless"
     else
         JAVA_VER="openjdk-11-jre-headless"
     fi
-    sudo DEBIAN_FRONTEND=noninteractive apt-get -y install ${JAVA_VER} git
+    if [[ ${DEB_VER} == "bookworm" ]]; then
+        sudo DEBIAN_FRONTEND=noninteractive sudo apt-get -y install ${JAVA_VER} git
+        sudo mv /etc/ssl /etc/ssl_old
+        sudo DEBIAN_FRONTEND=noninteractive sudo apt-get -y install ${JAVA_VER}
+        sudo cp -r /etc/ssl_old /etc/ssl
+    else
+        sudo DEBIAN_FRONTEND=noninteractive sudo apt-get -y install ${JAVA_VER} git
+    fi
     sudo install -o $(id -u -n) -g $(id -g -n) -d /mnt/jenkins
 '''
 
@@ -220,6 +229,7 @@ initMap['min-ol-9-x64'] = initMap['rpmMap']
 
 initMap['min-buster-x64'] = initMap['debMap']
 initMap['min-bullseye-x64'] = initMap['debMap']
+initMap['min-bookworm-x64'] = initMap['debMap']
 
 initMap['min-bionic-x64'] = initMap['debMap']
 initMap['min-focal-x64']  = initMap['debMap']
@@ -245,6 +255,7 @@ typeMap['min-focal-x64'] = typeMap['min-centos-7-x64']
 typeMap['min-jammy-x64'] = typeMap['min-centos-7-x64']
 typeMap['min-buster-x64'] = typeMap['min-centos-7-x64']
 typeMap['min-bullseye-x64'] = typeMap['min-centos-7-x64']
+typeMap['min-bookworm-x64'] = typeMap['min-centos-7-x64']
 
 execMap = [:]
 execMap['docker'] = '1'
@@ -260,6 +271,7 @@ execMap['min-buster-x64'] = '1'
 execMap['min-focal-x64'] = '1'
 execMap['min-jammy-x64'] = '1'
 execMap['min-bullseye-x64'] = '1'
+execMap['min-bookworm-x64'] = '1'
 
 devMap = [:]
 devMap['docker'] = '/dev/xvda=:8:true:gp2,/dev/xvdd=:80:true:gp2'
@@ -275,6 +287,7 @@ devMap['min-ol-8-x64'] = '/dev/sda1=:30:true:gp2,/dev/sdd=:80:true:gp2'
 devMap['min-ol-9-x64'] = '/dev/sda1=:30:true:gp2,/dev/sdd=:80:true:gp2'
 devMap['min-buster-x64'] = '/dev/xvda=:30:true:gp2,/dev/xvdd=:80:true:gp2'
 devMap['min-bullseye-x64'] = '/dev/xvda=:30:true:gp2,/dev/xvdd=:80:true:gp2'
+devMap['min-bookworm-x64'] = '/dev/xvda=:30:true:gp2,/dev/xvdd=:80:true:gp2'
 
 labelMap = [:]
 labelMap['docker'] = ''
@@ -290,6 +303,23 @@ labelMap['min-ol-8-x64'] = ''
 labelMap['min-ol-9-x64'] = ''
 labelMap['min-buster-x64'] = ''
 labelMap['min-bullseye-x64'] = ''
+labelMap['min-bookworm-x64'] = ''
+
+jvmoptsMap = [:]
+jvmoptsMap['docker'] = '-Xmx512m -Xms512m'
+jvmoptsMap['docker-32gb'] = jvmoptsMap['docker']
+jvmoptsMap['micro-amazon'] = jvmoptsMap['docker']
+jvmoptsMap['min-bionic-x64'] = jvmoptsMap['docker']
+jvmoptsMap['min-focal-x64'] = jvmoptsMap['docker']
+jvmoptsMap['min-jammy-x64'] = jvmoptsMap['docker']
+jvmoptsMap['min-centos-7-x64'] = jvmoptsMap['docker']
+jvmoptsMap['fips-centos-7-x64'] = jvmoptsMap['docker']
+jvmoptsMap['min-centos-8-x64'] = jvmoptsMap['docker']
+jvmoptsMap['min-ol-8-x64'] = jvmoptsMap['docker']
+jvmoptsMap['min-ol-9-x64'] = jvmoptsMap['docker']
+jvmoptsMap['min-buster-x64'] = jvmoptsMap['docker']
+jvmoptsMap['min-bullseye-x64'] = jvmoptsMap['docker']
+jvmoptsMap['min-bookworm-x64'] = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
 
 // https://github.com/jenkinsci/ec2-plugin/blob/ec2-1.39/src/main/java/hudson/plugins/ec2/SlaveTemplate.java
 SlaveTemplate getTemplate(String OSType, String AZ) {
@@ -310,7 +340,7 @@ SlaveTemplate getTemplate(String OSType, String AZ) {
         execMap[OSType],                            // String numExecutors
         userMap[OSType],                            // String remoteAdmin
         new UnixData('', '', '', '22', ''),         // AMITypeData amiType
-        '-Xmx512m -Xms512m',                        // String jvmopts
+        jvmoptsMap[OSType],                         // String jvmopts
         false,                                      // boolean stopOnTerminate
         netMap[AZ],                                 // String subnetId
         [
@@ -371,6 +401,7 @@ String region = 'us-west-2'
             getTemplate('min-focal-x64', "${region}${it}"),
             getTemplate('min-jammy-x64', "${region}${it}"),
             getTemplate('min-bullseye-x64', "${region}${it}"),
+            getTemplate('min-bookworm-x64', "${region}${it}"),
         ],                                       // List<? extends SlaveTemplate> templates
        '',
        ''
